--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <!-- <li><a href="vision.html">Vision</a></li> -->
                 <!-- <li><a href="policies.html">Policies</a></li> -->
                 <!-- <li><a href="events.html">Events</a></li> -->
-                <li><a href="objectives.html">Objectives</a></li>
+                <li><a href="templates/objectives.html">Objectives</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="blog.html">Blog</a></li>
             </ul>
