--- a/about.html
+++ b/about.html
@@ -3,24 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tajdeed Nizam Party-TNP - Home</title>
+    <title>Tajdeed Nizam Party-TNP - About Us</title>
     <link rel="stylesheet" href="../styles/main.css">
 </head>
 <body>
     <header>
-        <div class="logo-container">
-            <a href="index.html" class="logo-link">
-                <img src="../static/logo.png" alt="TNP Logo" class="party-logo">
-                <span class="logo-text">Tajdeed Nizam Party-TNP</span>
-            </a>
-        </div>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <!-- <li><a href="about.html">About Us</a></li> -->
-                <!-- <li><a href="vision.html">Vision</a></li> -->
-                <!-- <li><a href="policies.html">Policies</a></li> -->
-                <!-- <li><a href="events.html">Events</a></li> -->
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="vision.html">Vision</a></li>
+                <li><a href="policies.html">Policies</a></li>
+                <li><a href="events.html">Events</a></li>
                 <li><a href="objectives.html">Objectives</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="blog.html">Blog</a></li>
@@ -28,27 +22,12 @@
         </nav>
     </header>
 
-    <section class="hero">
-        <h1>Welcome to Tajdeed Nizam Party-TNP</h1>
-        <p>Your voice, our mission. Together, we build the future.</p>
-        <!-- <button class="donate">Donate Now</button>
-        <button class="volunteer">Become a Volunteer</button> -->
-    </section>
-
-    <section class="slider">
-        <div class="slider-container">
-            <img src="../static/1.webp" alt="Slide 1">
-            <img src="../static/2.webp" alt="Slide 2">
-            <!-- <img src="../static/health.jpg" alt="Slide 3">
-            <img src="../static/green.jpg" alt="Slide 4">
-            <img src="../static/tech.jpg" alt="Slide 5"> -->
-        </div>
-    </section>
-
-    <section class="about">
-        <h2>About Tajdeed Nizam Party-TNP</h2>
-        <p>Tajdeed Nizam Party-TNP is committed to making a difference in the lives of citizens by promoting justice, equality, and grass roots level democracy.</p>
-    </section>
+    <main>
+        <section class="about-section">
+            <h1>About Tajdeed Nizam Party-TNP</h1>
+            <p>Tajdeed Nizam Party-TNP was founded with the mission to empower citizens and foster an inclusive, prosperous society. Our values are rooted in integrity, justice, and progress.</p>
+        </section>
+    </main>
 
     <footer>
         <div class="footer-container">
