--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tajdeed Nizam Party-TNP - Home</title>
+    <title>Tajdeed Nizam Party-TNP - Blog</title>
     <link rel="stylesheet" href="../styles/main.css">
 </head>
 <body>
@@ -14,6 +14,7 @@
                 <span class="logo-text">Tajdeed Nizam Party-TNP</span>
             </a>
         </div>
+        
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -28,26 +29,19 @@
         </nav>
     </header>
 
-    <section class="hero">
-        <h1>Welcome to Tajdeed Nizam Party-TNP</h1>
-        <p>Your voice, our mission. Together, we build the future.</p>
-        <!-- <button class="donate">Donate Now</button>
-        <button class="volunteer">Become a Volunteer</button> -->
-    </section>
+    <section class="blog-section">
+        <h1>Our Journey and Leadership</h1>
+        <p>Learn more about how we started and the visionaries who lead our movement.</p>
 
-    <section class="slider">
-        <div class="slider-container">
-            <img src="../static/1.webp" alt="Slide 1">
-            <img src="../static/2.webp" alt="Slide 2">
-            <!-- <img src="../static/health.jpg" alt="Slide 3">
-            <img src="../static/green.jpg" alt="Slide 4">
-            <img src="../static/tech.jpg" alt="Slide 5"> -->
-        </div>
-    </section>
+        <h2>Founding Story</h2>
+        <p>Our party was founded by a group of passionate individuals committed to building a better future. The journey began in 2015 with a vision to empower youth and create a platform for progressive policies.</p>
 
-    <section class="about">
-        <h2>About Tajdeed Nizam Party-TNP</h2>
-        <p>Tajdeed Nizam Party-TNP is committed to making a difference in the lives of citizens by promoting justice, equality, and grass roots level democracy.</p>
+        <h2>Leadership</h2>
+        <ul>
+            <li><strong>Chairperson:</strong> A visionary leader with decades of experience in social reform.</li>
+            <li><strong>General Secretary:</strong> A dynamic organizer and advocate for youth empowerment.</li>
+            <li><strong>Policy Head:</strong> An expert in economic policies driving sustainable growth.</li>
+        </ul>
     </section>
 
     <footer>
