--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tajdeed Nizam Party-TNP - Home</title>
+    <title>Tajdeed Nizam Party-TNP - Contact Us</title>
     <link rel="stylesheet" href="../styles/main.css">
 </head>
 <body>
@@ -28,26 +28,15 @@
         </nav>
     </header>
 
-    <section class="hero">
-        <h1>Welcome to Tajdeed Nizam Party-TNP</h1>
-        <p>Your voice, our mission. Together, we build the future.</p>
-        <!-- <button class="donate">Donate Now</button>
-        <button class="volunteer">Become a Volunteer</button> -->
-    </section>
-
-    <section class="slider">
-        <div class="slider-container">
-            <img src="../static/1.webp" alt="Slide 1">
-            <img src="../static/2.webp" alt="Slide 2">
-            <!-- <img src="../static/health.jpg" alt="Slide 3">
-            <img src="../static/green.jpg" alt="Slide 4">
-            <img src="../static/tech.jpg" alt="Slide 5"> -->
-        </div>
-    </section>
-
-    <section class="about">
-        <h2>About Tajdeed Nizam Party-TNP</h2>
-        <p>Tajdeed Nizam Party-TNP is committed to making a difference in the lives of citizens by promoting justice, equality, and grass roots level democracy.</p>
+    <section class="content">
+        <h1>Contact Us</h1>
+        <p>We would love to hear from you! Reach out to us through any of the following methods:</p>
+        <ul>
+            <li><strong>Email:</strong> contact@myparty.org</li>
+            <li><strong>Phone:</strong> +1 234 567 890</li>
+            <li><strong>Address:</strong> 123 Main Street, Your City, Your Country</li>
+        </ul>
+        <p>Alternatively, fill out our contact form <a href="contact-form.html">here</a>.</p>
     </section>
 
     <footer>
