pdf re-uploaded

--- a/objectives.html
+++ b/objectives.html
@@ -148,7 +148,7 @@
 
         <!-- Add PDF download button -->
         <div class="download-container">
-            <a href="../Constitution.pdf" download="Party_Structure.pdf" class="download-button">Download Party Structure PDF</a>
+            <a href="../static/Constitution.pdf" download="Constitution.pdf" class="download-button">Download Party Structure PDF</a>
         </div>
     </section>
 
