--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
             <li><strong>Phone:</strong> +1 234 567 890</li>
             <li><strong>Address:</strong> 123 Main Street, Your City, Your Country</li>
         </ul>
-        <p>Alternatively, fill out our contact form <a href="contact-form.html">here</a>.</p>
+        <!-- <p>Alternatively, fill out our contact form <a href="contact-form.html">here</a>.</p> -->
     </section>
 
     <footer>
