--- a/objectives.html
+++ b/objectives.html
@@ -63,6 +63,10 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="vision.html">Vision</a></li>
+                <li><a href="policies.html">Policies</a></li>
+                <li><a href="events.html">Events</a></li>
                 <li><a href="objectives.html">Objectives</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="blog.html">Blog</a></li>
@@ -79,7 +83,7 @@
             <li><strong>Promoting Education:</strong> To focus on spreading education and training among all citizens, especially in less developed areas of Pakistan.</li>
         </ul>
 
-        <h2>Party Structure</h2>
+        <!-- <h2>Party Structure</h2>
         <div class="chart-container">
             <div class="chart">
                 <div class="node">President</div>
@@ -105,9 +109,9 @@
                 <div class="line"></div>
                 <div class="node">General Assembly</div>
             </div>
-        </div>
+        </div> -->
 
-        <div class="chart-container">
+        <!-- <div class="chart-container">
             <div class="chart">
                 <div class="node">Provinces</div>
                 <div class="line"></div>
@@ -144,7 +148,7 @@
                     <div class="node">Minorities</div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
         <!-- Add PDF download button -->
         <div class="download-container">
