--- a/about.html
+++ b/about.html
@@ -8,6 +8,12 @@
 </head>
 <body>
     <header>
+        <div class="logo-container">
+            <a href="index.html" class="logo-link">
+                <img src="../static/logo.png" alt="TNP Logo" class="party-logo">
+                <span class="logo-text">Tajdeed Nizam Party-TNP</span>
+            </a>
+        </div>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
