--- a/blog.html
+++ b/blog.html
@@ -18,10 +18,10 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <!-- <li><a href="about.html">About Us</a></li> -->
-                <!-- <li><a href="vision.html">Vision</a></li> -->
-                <!-- <li><a href="policies.html">Policies</a></li> -->
-                <!-- <li><a href="events.html">Events</a></li> -->
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="vision.html">Vision</a></li>
+                <li><a href="policies.html">Policies</a></li>
+                <li><a href="events.html">Events</a></li>
                 <li><a href="objectives.html">Objectives</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="blog.html">Blog</a></li>
