--- a/events.html
+++ b/events.html
@@ -9,8 +9,10 @@
 <body>
     <header>
         <div class="logo-container">
-            <img src="../static/logo.jpg" alt="TNP Logo" class="party-logo">
-            <span class="logo-text">Tajdeed Nizam Party-TNP</span>
+            <a href="index.html" class="logo-link">
+                <img src="../static/logo.png" alt="TNP Logo" class="party-logo">
+                <span class="logo-text">Tajdeed Nizam Party-TNP</span>
+            </a>
         </div>
         <nav>
             <ul>
