--- a/vision.html
+++ b/vision.html
@@ -8,13 +8,19 @@
 </head>
 <body>
     <header>
+        <div class="logo-container">
+            <a href="index.html" class="logo-link">
+                <img src="../static/logo.png" alt="TNP Logo" class="party-logo">
+                <span class="logo-text">Tajdeed Nizam Party-TNP</span>
+            </a>
+        </div>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <!-- <li><a href="about.html">About Us</a></li> -->
-                <!-- <li><a href="vision.html">Vision</a></li> -->
-                <!-- <li><a href="policies.html">Policies</a></li> -->
-                <!-- <li><a href="events.html">Events</a></li> -->
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="vision.html">Vision</a></li>
+                <li><a href="policies.html">Policies</a></li>
+                <li><a href="events.html">Events</a></li>
                 <li><a href="objectives.html">Objectives</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="blog.html">Blog</a></li>
